feat: update article using patch JSON and patch method

--- a/serverless.yml
+++ b/serverless.yml
@@ -37,6 +37,12 @@ functions:
       - httpApi:
           path: /create
           method: post
+  updateArticle:
+    handler: controller/article.updateArticle
+    events:
+      - httpApi:
+          path: /update
+          method: patch
   deleteArticle:
     handler: controller/article.deleteArticle
     events:
