--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tiptap/react": "^2.0.0-beta.195",
+    "@tiptap/starter-kit": "^2.0.0-beta.195",
     "bootstrap": "^5.2.1",
     "caniuse-lite": "^1.0.30001281",
     "next": "^12.3.0",
