feat: create and edit pages, multiple versions of a article

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,7 +54,7 @@ functions:
     events:
       - httpApi:
           path: /
-          method: patchArticle
+          method: patch
 
 plugins:
   - serverless-offline
