--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "caniuse-lite": "^1.0.30001281",
     "next": "^12.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "serverless": "^3.22.0",
     "uuid": "^9.0.0"
